@@ -1306,6 +1306,11 @@ SAYFILTER=
 # Each word/phrase is separated by a space.
 CHANNELFILTER=
 
+# POSEFILTER masks out messages that contain one of the words listed.
+# Phrases can also be included by putting the strings in quotes.
+# Each word/phrase is separated by a space.
+POSEFILTER=
+
 ######################################################################
 # Redefinable escape codes
 ######################################################################
@@ -1453,7 +1458,9 @@ CBTMSGS=OFF
 #    PLAYERTHREAD, SESSIONTHREAD, STATSTHREAD, CATALOGTHREAD, SMTPCLIENT
 #    DBERRORQUE, DBERRORQUESTART, MAXNEWPERIP, MAXCONNSPERACCOUNT,
 #    RESPAWNTHREAD
-DISABLE=
+#
+# The default value is COMMAND_POSE, which disables the pose command.
+DISABLE=COMMAND_POSE
 
 # The DEBUG flag should be used only by developers who want lots of
 # extra logging in order to fix bugs.  These values are also comma delimited.
