@@ -1,0 +1,72 @@
+package com.planet_ink.coffee_mud.Commands;
+import com.planet_ink.coffee_mud.core.interfaces.*;
+import com.planet_ink.coffee_mud.core.*;
+import com.planet_ink.coffee_mud.core.collections.*;
+import com.planet_ink.coffee_mud.Abilities.interfaces.*;
+import com.planet_ink.coffee_mud.Areas.interfaces.*;
+import com.planet_ink.coffee_mud.Behaviors.interfaces.*;
+import com.planet_ink.coffee_mud.CharClasses.interfaces.*;
+import com.planet_ink.coffee_mud.Commands.interfaces.*;
+import com.planet_ink.coffee_mud.Common.interfaces.*;
+import com.planet_ink.coffee_mud.Exits.interfaces.*;
+import com.planet_ink.coffee_mud.Items.interfaces.*;
+import com.planet_ink.coffee_mud.Locales.interfaces.*;
+import com.planet_ink.coffee_mud.MOBS.interfaces.*;
+import com.planet_ink.coffee_mud.Races.interfaces.*;
+
+import java.util.*;
+
+/*
+   Copyright 2000-2010 Bo Zimmerman
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+@SuppressWarnings("unchecked")
+public class Pose extends StdCommand
+{
+	public Pose(){}
+
+	private final String[] access={"POSE"};
+	public String[] getAccessWords(){return access;}
+	public boolean execute(MOB mob, Vector commands, int metaFlags)
+		throws java.io.IOException
+	{
+		if(commands.size()<2)
+		{
+			mob.tell("POSE how?");
+			return false;
+		}
+		String combinedCommands=CMParms.combine(commands,1);
+		combinedCommands=CMProps.applyINIFilter(combinedCommands,CMProps.SYSTEM_POSEFILTER);
+        if(combinedCommands.trim().startsWith("'")||combinedCommands.trim().startsWith("`"))
+            combinedCommands=combinedCommands.trim();
+        else
+            combinedCommands=" "+combinedCommands.trim();
+		String emote="^E<S-NAME>"+combinedCommands+" ^?";
+		CMMsg msg=CMClass.getMsg(mob,null,null,CMMsg.MSG_EMOTE | CMMsg.MASK_ALWAYS,"^E"+mob.name()+combinedCommands+" ^?",emote,emote);
+		if(mob.location().okMessage(mob,msg))
+		{
+			mob.location().send(mob,msg);
+			mob.setDisplayText(mob.Name()+combinedCommands);
+			PlayerStats pstats = mob.playerStats();
+			if(pstats != null)
+				pstats.setSavedPose(mob.Name()+combinedCommands);
+		}
+		return false;
+	}
+    public double combatActionsCost(MOB mob, List<String> cmds){return CMath.div(CMProps.getIntVar(CMProps.SYSTEMI_DEFCOMCMDTIME),100.0);}
+    public double actionsCost(MOB mob, List<String> cmds){return CMath.div(CMProps.getIntVar(CMProps.SYSTEMI_DEFCMDTIME),100.0);}
+	public boolean canBeOrdered(){return true;}
+
+	
+}
