@@ -1521,6 +1521,14 @@ Example : poll\n\r\
 Short(s): \n\r\
 Lists any polls that the player can participate in, or view the results of.
 	
+POSE=\
+Command : POSE\n\r\
+Usage   : POSE [STANDING DESCRIPTION] ... \n\r\
+Example : emote is standing here talking to himself.\n\r\
+Short(s): \n\r\
+Changes the message that is seen when a player is standing passively \
+in a room.
+
 PRACTICE=\
 Command : PRACTICE\n\r\
 Usage   : PRACTICE [SKILL OR SPELL NAME] ([TEACHER MOB NAME])\n\r\
