@@ -1132,6 +1132,14 @@
 		<FONT COLOR=WHITE>@INIValue?MASK=CHANNELFILTER&INIHELP@
 		</TD></TR>
 		
+		
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>POSEFILTER</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=POSEFILTER SIZE=40 VALUE="@INIValue?MASK=POSEFILTER&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=POSEFILTER&INIHELP@
+		</TD></TR>
+		
 		</TABLE>
 	@endif@
 	<P><CENTER><INPUT TYPE=BUTTON NAME=INISUBMIT VALUE="Submit Changes" ONCLICK="AddRemove('',' ','','UPDATE');"></CENTER>
