@@ -2293,4 +2293,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
 24.FakeDB now supports PreparedStatements, and Apache Derby support is now complete.
 25.Skill Recipes: Skill Component entries can now be substituted for ingredient amount in skill recipes.
 26.WebMacro NumPlayers supports ALL, TOTAL, TOTALCACHED, and ACCOUNTS.  See Web Guide for more info.
+27.New command: POSE, with new filter INI entry for it: POSEFILTER
  
